aksworkshop_dot_io/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - host: frontend.51.105.96.56.nip.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
